Fix table spacing in web display

--- a/app/assets/stylesheets/components/_barcode.scss
+++ b/app/assets/stylesheets/components/_barcode.scss
@@ -1,6 +1,7 @@
 .barcode.barby-barcode {
   width: auto;
   table-layout: fixed;
+  border-spacing: 0;
 }
 
 .barcode .barby-cell {
